# EdgeFormer-PyTorch

./: .gitignore  __.json  check_edge.py  check_system.py  convert2script.py  download.py  error_cuda.txt  error_infer_cuda.txt  error_trace.txt  error_train_cuda.txt  export_edge.py  export_script.py  export_tensorrt.py  infer_cuda.py  infer_edge.py  infer_tensorrt.py  infer_video.py  info.txt  load_datasets.py  main_dec.py  main_det.py  main_export.py  main_test.py  main_train_det.py  note.ipynb  opencv.py  readme.md  show_history.py  utils.ipynb
cls/: main_cls.py  main_train_cls.py
config/: edgeformer_cls_train.yaml  edgeformer_det_infer.yaml  edgeformer_det_train.yaml  parcnet_det_eval.yaml  parcnet_det_infer.yaml  parcnet_det_train.yaml
cpp/: CMakeLists.txt  classifier.cpp  detector.cpp  main.cpp  onnx.cpp
cpp/b/: CMakeCache.txt
edgeformer/: main_train.py
edgeformer/config/classification/edgeformer/: edgeformer_s.yaml
edgeformer/cvnets/layers/: conv_layer.py  pooling.py  sep_conv_layer.py
edgeformer/cvnets/layers/normalization/: instance_norm.py  layer_norm.py
edgeformer/cvnets/misc/: anchor_generator.py
edgeformer/cvnets/models/classification/: base_cls.py
edgeformer/cvnets/models/detection/: base_detection.py  ssd.py
edgeformer/cvnets/modules/: aspp_block.py  edgeformer_block.py  mobilenetv2.py
edgeformer/cvnets_b/models/: __init__.py
edgeformer/cvnets_b/models/detection/: ssd.py  (+1 more)
edgeformer/cvnets_b/modules/: edgeformer_block.py  mobilenetv2.py
edgeformer/engine/: eval_detection.py  training_engine.py
edgeformer/metrics/: stats.py
edgeformer/optim/scheduler/: cyclic.py
edgeformer/options/: opts.py
edgeformer/utils/: tensor_utils.py
error/: 20-6_error_train_lab.txt  29-05-23_error_train_lab.txt  31-05-23_error_train_lab.txt  7-06-23_error_train_lab.txt  error_file.txt  error_trace.txt  error_train_cuda.txt  error_train_lab_skip.txt  find_file.ipynb  info.txt
error/error_28-06-23/: error_train_lab.txt  error_train_lab_1.txt  error_train_lab_10.txt  error_train_lab_11.txt  error_train_lab_12.txt  error_train_lab_13.txt  error_train_lab_14.txt  error_train_lab_15.txt  error_train_lab_16.txt  error_train_lab_17.txt  error_train_lab_18.txt  error_train_lab_19.txt  error_train_lab_2.txt  error_train_lab_20.txt  error_train_lab_21.txt  error_train_lab_22.txt  error_train_lab_23.txt  error_train_lab_24.txt  error_train_lab_25.txt  error_train_lab_26.txt  error_train_lab_27.txt  error_train_lab_28.txt  error_train_lab_29.txt  error_train_lab_3.txt  error_train_lab_30.txt  error_train_lab_31.txt  error_train_lab_32.txt  error_train_lab_33.txt  error_train_lab_34.txt  error_train_lab_35.txt  error_train_lab_36.txt  error_train_lab_37.txt  error_train_lab_38.txt  error_train_lab_39.txt  error_train_lab_4.txt  error_train_lab_40.txt  error_train_lab_41.txt  error_train_lab_42.txt  error_train_lab_43.txt  error_train_lab_44.txt  (+29 more)
examples/: cls_Infer.py  cls_mobilenet_imgnet1k.py  cls_resnet18_imgnet1k.py  dec_rcnn_coco.py  dec_yolov8.py  det_detr.py  det_rcnn.py  det_ssd.py  det_yolov8.py  ex_detr.py  ex_yolov8.py  test.ipynb
parcnet/: eval_cls.py  main_eval.py  main_train.py
parcnet/common/: __init__.py
parcnet/cvnets/layers/: conv_layer.py  linear_layer.py  multi_head_attention.py  non_linear_layers.py
parcnet/cvnets/misc/: anchor_generator.py
parcnet/cvnets/modules/: edgeformer_block.py  mobilevit_block.py
parcnet/cvnets_b/layers/: linear_layer.py
parcnet/cvnets_b/misc/: anchor_generator.py
parcnet/cvnets_b/modules/: edgeformer_block.py
parcnet/data/: data_loaders.py
parcnet/data/datasets/: dataset_base.py
parcnet/engine/: eval_detection.py  eval_segmentation.py  training_engine.py
parcnet/loss_fn/detection_loss_fns/: ssd_multibox_loss.py
parcnet/metrics/: metric_monitor.py  stats.py
parcnet/options/: opts.py
parcnet/utils/: checkpoint_utils.py
results/run10000/: history.json
utils/: coco_modif.py  download.py  utils.ipynb
(+17 files in other folders)
